--- a/src/app/balance/balance.component.css
+++ b/src/app/balance/balance.component.css
@@ -23,7 +23,11 @@ button {
 .button-container {
 	text-align: center;
 }
-
+@media only screen and (max-width: 600px) {
+	.mainForm {
+		width: 100%;
+	}
+}
 @media only screen and (min-width: 992px) {
 	.mainForm {
 		width: 100%;
